--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,15 @@
-lintian (2.81.0+git) UNRELEASED; urgency=medium
+lintian (2.82.0) unstable; urgency=medium
 
-  * WIP (generated at release time: please do not add entries below).
+  [ Felix Lechner ]
+  * Replace files ignored by dpkg-source in dpkg-source; their absence was
+    causing a FTBFS on the official buildds.
+  * Drop two legacy tests that produced architecture-specific tags but were
+    not needed.
 
- -- Chris Lamb <lamby@debian.org>  Tue, 23 Jun 2020 11:52:58 +0100
+  [ Dmitry Shachnev ]
+  * Add sphinx as a possible build-dependency for dh_sphinxdoc.
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 26 Jun 2020 11:58:12 +0000
 
 lintian (2.81.0) unstable; urgency=medium
 
