--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,38 @@
-lintian (2.82.0+git) UNRELEASED; urgency=medium
+lintian (2.83.0) unstable; urgency=medium
 
-  * WIP (generated at release time: please do not add entries below).
+  [ Felix Lechner ]
+  * Add a new standalone HTML output mode.
+  * Warn about embedded javascript files provided by sphinx.
+    (Closes: #964013)
+  * Exempt links that stay inside /usr/lib from breakout-link.
+    (Closes: #964073)
+  * Rename second mention of tag manpage-in-wrong-directory.
+    (Closes: #964282)
+  * Extend spell check to all parts of debhelper rule targets.
+    (Closes: #963765)
+  * Only check the DEP-3 header for legacy encodings in debian/patches.
+    (Closes: #964281)
+  * Restrict top folder for breakout-link to architecture in /usr/lib and
+    permit links freely within. (Closes: #964073)
+  * Use the new path to test recipes in autopkgtest. (Closes: #964405)
+  * Drop a test no longer building due to new restraints on version
+    strings. (See: #953554)
+  * Exempt Lintian's own test suite from scans in source files and remove
+    programmatic conditionals in checks.
+  * Replace references to 'manpages' with 'manual pages' in tag
+    descriptions.
 
- -- Chris Lamb <lamby@debian.org>  Fri, 26 Jun 2020 15:23:23 +0100
+  [ Chris Lamb ]
+  * Correct a reference to "override_dh_" in the long description of the
+    excessive-debhelper-overrides tag.
+
+  [ Lev Lamberov ]
+  * Update Debian Emacsen team wiki page link.
+
+  [ Paul Wise ]
+  * Add several spelling corrections.
+
+ -- Chris Lamb <lamby@debian.org>  Tue, 07 Jul 2020 22:50:19 +0000
 
 lintian (2.82.0) unstable; urgency=medium
 
