--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.83.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated at release time: please do not add entries below).
+
+ -- Chris Lamb <lamby@debian.org>  Wed, 08 Jul 2020 00:17:26 +0100
+
 lintian (2.83.0) unstable; urgency=medium
 
   [ Felix Lechner ]
