--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.84.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated at release time: please do not add entries below).
+
+ -- Chris Lamb <lamby@debian.org>  Wed, 15 Jul 2020 23:47:44 +0100
+
 lintian (2.84.0) unstable; urgency=medium
 
   * Summary of tag changes:
