--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,33 @@
-lintian (2.84.0+git) UNRELEASED; urgency=medium
+lintian (2.85.0) unstable; urgency=medium
 
-  * WIP (generated at release time: please do not add entries below).
+  [ Felix Lechner ]
+  * Fix wildcard-matches-nothing-in-dep5-copyright. (Closes: #888001)
+  * Don't emit send-patch when Applied-Upstream is set. (Closes: #965119)
+  * Disregard watch files containing only comments. (Closes: #965385)
+  * Account properly for license identifiers in debian/copyright and split
+    wildcard matching from license parsing. (Closes: #779676)
+  * Expect only {S,B,C} to be capitalised when following a leading X in
+    field names. (Closes: #965966)
+  * Add test case demonstrating false-positive for
+    dep5-copyright-license-name-not-unique is fixed. (Closes: #801182)
+  * Parse lists of distributions in changes files.
+  * Add a test case for email address with missing closing bracket.
+    (Re: #965335)
+  * Move Salsa CI specification to debian/salsa-ci.yml.
 
- -- Chris Lamb <lamby@debian.org>  Wed, 15 Jul 2020 23:47:44 +0100
+  [ gregor herrmann ]
+  * Add another debian/copyright template.
+
+  [ Axel Beckert ]
+  * Replace debhelper level 12 with 13 in tag descriptions examples.
+  * Add correction for a "debhelper" misspelling and correct in some
+    previous changelog entries.
+
+  [ Chris Lamb ]
+  * Drop reminders from 26 tags that false-positives should be reported to
+    Lintian as this is implicit in all ~1,500 tags.
+
+ -- Chris Lamb <lamby@debian.org>  Tue, 21 Jul 2020 22:02:39 +0000
 
 lintian (2.84.0) unstable; urgency=medium
 
