--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,17 @@
-lintian (2.86.0+git) UNRELEASED; urgency=medium
+lintian (2.87.0) unstable; urgency=medium
 
-  * WIP (generated at release time: please do not add entries below).
+  [ Chris Lamb ]
+  * Add support for clzip as an alternative for lzip. (Closes: #967083)
+  * Add justification for lzip dependency in previous debian/changelog
+    entry. (Closes: #966817)
 
- -- Chris Lamb <lamby@debian.org>  Sat, 01 Aug 2020 16:08:01 +0100
+  [ Felix Lechner ]
+  * Run no tests when building to reduce Build-Depends and drop the nocheck
+    build profile as a consequence.
+  * Replace frontend/dplint with a simpler startup script at
+    frontend/lintian.
+
+ -- Chris Lamb <lamby@debian.org>  Tue, 04 Aug 2020 11:53:25 +0000
 
 lintian (2.86.0) unstable; urgency=medium
 
