--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.87.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated at release time: please do not add entries below).
+
+ -- Chris Lamb <lamby@debian.org>  Tue, 04 Aug 2020 12:54:30 +0100
+
 lintian (2.87.0) unstable; urgency=medium
 
   [ Chris Lamb ]
