Use Perl's FindBin to reliably detect the base directory for Lintian.
The new environment variable LINTIAN_BASE combines the functionality of
LINTIAN_ROOT and LINTIAN_TEST_ROOT, which no longer exist.

The reason for two variables was to allow for a version difference, but
under autopkgtest that is not needed.

When LINTIAN_TEST_INSTALLED is set to 'yes', the test suite will now use the
installed version as much as possible---even when loading some modules.

The Lintian executable being tested is now in LINTIAN_UNDER_TEST.

--- a/man/lintian-info.pod
+++ b/man/lintian-info.pod
@@ -68,7 +68,7 @@ Display usage information and exit.
 =item B<--include-dir> dir
 
 Use dir as an additional "Lintian root".  The directory is expected
-have a similar layout to the LINTIAN_ROOT (if it exists), but does not
+have a similar layout to the LINTIAN_BASE (if it exists), but does not
 need to be a full self-contained root.
 
 Unlike B<lintian>, B<lintian-info> will I<not> load any code from
