--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,19 @@
-lintian (2.87.0+git) UNRELEASED; urgency=medium
+lintian (2.88.0) unstable; urgency=medium
 
-  * WIP (generated at release time: please do not add entries below).
+  [ Felix Lechner ]
+  * For DEP-5 copyrights, disregard the debian/ folder in upstream sources.
+    (Closes: #967226)
+  * In the files/compressed/lz check, do not stat(2) lzip command for every
+    file in the index.
+  * Move executables from ./frontend to ./bin and set indirect links from
+    /usr/bin. Also move our test executables from t/bin to ./bin.
+  * Install the Lintian library modules to /usr/share/lintian/lib.
+  * Use Perl's FindBin to reliably detect the base directory for Lintian.
+  * Stop installing Test modules in Perl system path.
+  * Split lintian, lintian-info and spellintian into three independent
+    scripts.
 
- -- Chris Lamb <lamby@debian.org>  Tue, 04 Aug 2020 12:54:30 +0100
+ -- Chris Lamb <lamby@debian.org>  Fri, 07 Aug 2020 12:13:12 +0000
 
 lintian (2.87.0) unstable; urgency=medium
 
