--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.89.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated at release time: please do not add entries below).
+
+ -- Chris Lamb <lamby@debian.org>  Mon, 10 Aug 2020 11:01:29 +0100
+
 lintian (2.89.0) unstable; urgency=medium
 
   * Summary of tag changes:
