--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,15 @@
-lintian (2.89.0+git) UNRELEASED; urgency=medium
+lintian (2.90.0) unstable; urgency=medium
 
-  * WIP (generated at release time: please do not add entries below).
+  [ Felix Lechner ]
+  * Un-deprecate /etc/lintianrc, remove file on upgrade and ship in
+    doc/examples. (Closes: #968326)
+  * Move all executables not meant for shipping to ./private.
+  * Large number of internal changes to use IPC::Run3 over IO::Async.
 
- -- Chris Lamb <lamby@debian.org>  Mon, 10 Aug 2020 11:01:29 +0100
+  [ Andrius Merkys ]
+  * Fix a typo in the long description of the breakout-link tag.
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 14 Aug 2020 08:55:33 +0000
 
 lintian (2.89.0) unstable; urgency=medium
 
