--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.90.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated at release time: please do not add entries below).
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 14 Aug 2020 10:01:30 +0100
+
 lintian (2.90.0) unstable; urgency=medium
 
   [ Felix Lechner ]
