--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.91.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated at release time: please do not add entries below).
+
+ -- Chris Lamb <lamby@debian.org>  Thu, 20 Aug 2020 22:30:12 +0100
+
 lintian (2.91.0) unstable; urgency=medium
 
   [ Felix Lechner ]
