--- a/man/annotate-lintian-hints.pod
+++ b/man/annotate-lintian-hints.pod
@@ -1,5 +1,6 @@
 # Copyright © 2010 Niels Thykier
 # Copyright © 2017 Chris Lamb <lamby@debian.org>
+# Copyright © 2020 Felix Lechner
 #  - based on the work Richard Braakman and Christian
 #    Schwarz (copyrighted 1998).
 #
@@ -21,30 +22,28 @@
 
 =head1 NAME
 
-lintian-info - give detailed information about Lintian's error tags
+annotate-lintian-hints - give detailed information about Lintian's error tags
 
 =head1 SYNOPSIS
 
-B<lintian-info> [I<log-file>...]
-
-B<lintian-info> B<--tags> I<tag> ...
+B<annotate-lintian-hints> [I<log-file>...]
 
 =head1 DESCRIPTION
 
-The B<lintian-info> command parses the output of the B<lintian>
-command and gives verbose information about the listed Lintian error
-tags, parses a Lintian override file and gives verbose information
-about the tags included, or (if given the B<-t> or B<--tags> option)
-explains a given tag or tags.
+The B<annotate-lintian-hints> command parses the EWI output of the
+B<lintian> command and gives verbose information about the listed
+Lintian tags, or parses a Lintian override file and gives verbose
+information about the tags included.
 
 If no log-file is specified on the command line, this command expects
 its input on stdin. Thus, the output of B<lintian> can either be piped
-through B<lintian-info> or a log file produced by B<lintian> can be
-processed with this command.  (Note, though, that the B<lintian>
-command has a command line option B<-i> to display the same results as
-B<lintian-info>, so you will not normally need to pipe the output of
-B<lintian> into this command.)
+through B<annotate-lintian-hints> or a log file produced by B<lintian> can be
+processed with this command.
 
+  (Note, though, that the B<lintian> command has a command line option
+B<-i> to display the same results as B<annotate-lintian-hints>, so you
+normally do not need to pipe the output of B<lintian> through this
+command to see the extra information.)
 
 =head1 OPTIONS
 
@@ -57,10 +56,6 @@ and search the input for lines formatted like Lintian override
 entries.  For each one that was found, display verbose information
 about that tag.
 
-=item B<-l>, B<--list-tags>
-
-List all tags Lintian knows about in sorted order.
-
 =item B<-h>, B<--help>
 
 Display usage information and exit.
@@ -71,13 +66,11 @@ Use dir as an additional "Lintian root".  The directory is expected
 have a similar layout to the LINTIAN_BASE (if it exists), but does not
 need to be a full self-contained root.
 
-Unlike B<lintian>, B<lintian-info> will I<not> load any code from
+Unlike B<lintian>, B<annotate-lintian-hints> will I<not> load any code from
 these additional directories.
 
 This option may appear more than once; each time adding an additional
 directory.
-
-B<Note>: This option should be the very first if given.
 
 =item B<--profile> prof
 
@@ -85,16 +78,11 @@ Use the severities from the vendor profile prof when displaying tags.
 If the profile name does not contain a slash, the default profile for
 that vendor is chosen.
 
-If not specified, B<lintian-info> loads the best profile for the
+If not specified, B<annotate-lintian-hint> loads the best profile for the
 current vendor.
 
 Please Refer to the Lintian User Manual for the full documentation of
 profiles.
-
-=item B<-t>, B<--tag>, B<--tags>
-
-Rather than treating them as log file names, treat any command-line
-options as tag names and display the descriptions of each tag.
 
 =item B<--user-dirs>, B<--no-user-dirs>
 
@@ -106,15 +94,7 @@ default can be disabled (and re-enabled) by using B<--no-user-dirs>
 These option can appear multiple times, in which case the of them
 to appear determines the result.
 
-B<Note>: This option should be the very first if given.
-
 =back
-
-=head1 EXIT STATUS
-
-If B<-t> or B<--tags> was given and one or more of the tags specified
-were unknown, this command returns the exit code 1.  Otherwise, it
-always returns with exit code 0.
 
 =head1 SEE ALSO
 
