--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.92.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated at release time: please do not add entries below).
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 28 Aug 2020 12:31:36 +0100
+
 lintian (2.92.0) unstable; urgency=medium
 
   [ Felix Lechner ]
