--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,20 @@
-lintian (2.92.0+git) UNRELEASED; urgency=medium
+lintian (2.93.0) unstable; urgency=medium
 
-  * WIP (generated at release time: please do not add entries below).
+  [ Felix Lechner ]
+  * Process display options according to truth value, not presence.
+    (Closes: #969406)
+  * Only announce left over processes in debug mode, fixing autopkgtest
+    failures.
+  * Clean up profile code and drop {VENDOR} notation in profile names.
+  * Support newlines in file names. (Re: #929729)
 
- -- Chris Lamb <lamby@debian.org>  Fri, 28 Aug 2020 12:31:36 +0100
+  [ Peter Pentchev ]
+  * Ignore *.txt files in Python egg-info directories.
+
+  [ Reiner Herrmann ]
+  * Add PrefersNonDefaultGPU to known-desktop-keys.
+
+ -- Chris Lamb <lamby@debian.org>  Thu, 03 Sep 2020 21:54:58 +0000
 
 lintian (2.92.0) unstable; urgency=medium
 
