--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.93.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated at release time: please do not add entries below).
+
+ -- Chris Lamb <lamby@debian.org>  Thu, 03 Sep 2020 22:56:49 +0100
+
 lintian (2.93.0) unstable; urgency=medium
 
   [ Felix Lechner ]
