--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,53 @@
-lintian (2.93.0+git) UNRELEASED; urgency=medium
+lintian (2.94.0) unstable; urgency=medium
 
-  * WIP (generated at release time: please do not add entries below).
+  * Summary of tag changes:
+    + Added:
+      - number-of-patches
+      - unpack-message-for-deb-control
+      - unpack-message-for-deb-data
+      - unpack-message-for-orig
+      - unpack-message-for-source
+    + Removed/merged:
+      - tar-errors-from-control
+      - tar-errors-from-data
+      - tar-errors-from-source
 
- -- Chris Lamb <lamby@debian.org>  Thu, 03 Sep 2020 22:56:49 +0100
+  [ Chris Lamb ]
+  * Don't emit odd-mark-in-description for large numbers such as "300,000".
+    (Closes: #969528)
+  * Update all "my $LINTIAN_VERSION" instances in binary scripts, not just
+    the ones we specify as we had added and removed some.
+  * Correct a typo in the long description for odd-mark-in-description.
+  * Don't try and open debian/patches/series if it does not exist.
+  * Update CONTRIBUTING.md:
+    - Merge data/README into this file.
+    - Use the "#" Markdown style for headings.
+    - Drop recommendation to update debian/changelog manually.
+
+  [ Felix Lechner ]
+  * Allow namespaced tags in override files; fix parsing inconsistency.
+    (Closes: #969719)
+  * Rename two utility programs so their names start with 'lintian'.
+  * Widen output when looking for groff errors in manual pages.
+    (Re: #892423)
+  * Allow new Gitlab-style "includes" in CI pipeline specifications.
+  * Adjust private/regenerate-profiles to new tag file extension and
+    regenerate profiles.
+  * Announce match for sensible utils in context of
+    missing-depends-on-sensible-utils.
+  * Move number-of-patches to a separate check file.
+
+  [ Peter Wienemann ]
+  * Add a new number-of-patches classification tag.
+
+  [ Dominic Hargreaves ]
+  * Remove obsolete advice regarding alternate depends for dual-lived perl
+    modules in the package-superseded-by-perl tag.
+
+  [ Simon McVittie ]
+  * data: Use correct separator for all dh addons and commands
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 11 Sep 2020 08:31:01 +0000
 
 lintian (2.93.0) unstable; urgency=medium
 
