--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.94.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated at release time: please do not add entries below).
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 11 Sep 2020 09:32:50 +0100
+
 lintian (2.94.0) unstable; urgency=medium
 
   * Summary of tag changes:
