--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.95.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated at release time: please do not add entries below).
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 18 Sep 2020 10:47:33 +0100
+
 lintian (2.95.0) unstable; urgency=medium
 
   * Summary of tag changes:
