--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,28 @@
-lintian (2.95.0+git) UNRELEASED; urgency=medium
+lintian (2.96.0) unstable; urgency=medium
 
-  * WIP (generated at release time: please do not add entries below).
+  * Summary of tag changes:
+    + Added:
+      - old-dpmt-vcs
+      - old-papt-vcs
+      - papt-dmpt-merged
+    + Removed:
+      - wrong-vcs-location-for-dpmt
+      - wrong-vcs-location-for-papt
 
- -- Chris Lamb <lamby@debian.org>  Fri, 18 Sep 2020 10:47:33 +0100
+  [ Chris Lamb ]
+  * Update the expected Vcs-{Browser,Git} location of modules and
+    applications maintained by the Python module team. (Closes: #970743)
+
+  [ Louis-Philippe Véronneau ]
+  * Update DPMT and PAPT VCS tags for new Python Team.
+  * Add a new papt-dmpt-merged tag for Debian Python Team Maintainer.
+
+  [ Felix Lechner ]
+  * Enforce code style as part of autopkgtest testing.
+  * Do not install pkg-js-tools as part of running the autopkgtests until
+    path conflicts are resolved.
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 25 Sep 2020 10:35:54 +0000
 
 lintian (2.95.0) unstable; urgency=medium
 
