--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.98.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated at release time: please do not add entries below).
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 16 Oct 2020 12:14:45 +0100
+
 lintian (2.98.0) unstable; urgency=medium
 
   * Summary of tag changes:
