--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.99.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated at release time: please do not add entries below).
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 23 Oct 2020 10:15:33 +0100
+
 lintian (2.99.0) unstable; urgency=medium
 
   [ Chris Lamb ]
