--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,27 @@
-lintian (2.100.0+git) UNRELEASED; urgency=medium
+lintian (2.101.0) unstable; urgency=medium
 
-  * WIP (generated at release time: please do not add entries below).
+  * Summary of tag changes:
+    + Removed:
+      - debian-watch-file-declares-multiple-versions
+      - debian-watch-file-missing-version
+      - debian-watch-file-unknown-version
+    + Added:
+      - missing-debian-watch-file-standard
+      - multiple-debian-watch-file-standards
+      - obsolete-debian-watch-file-standard
+      - older-debian-watch-file-standard
+      - unknown-debian-watch-file-standard
 
- -- Chris Lamb <lamby@debian.org>  Fri, 30 Oct 2020 08:50:40 +0000
+  [ Felix Lechner ]
+  * Accept postgresql-all as an additional build prerequisite for the pgxs
+    debhelper addon. (Closes: #973503)
+  * Declare debian/watch file version 2 obsolete and flag version 3.
+    (Closes: #973637)
+  * Show full paths for changelog-related tags in installation packages.
+  * In lintian-explain-tags, produce valid JSON output for multiple tags.
+  * Make JSON output reproducible by removing explicit maintainer field.
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 06 Nov 2020 09:22:42 +0000
 
 lintian (2.100.0) unstable; urgency=medium
 
