--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,22 @@
-lintian (2.101.0+git) UNRELEASED; urgency=medium
+lintian (2.102.0) unstable; urgency=medium
 
-  * WIP (generated at release time: please do not add entries below).
+  * Summary of tag changes:
+    + Added:
+      - empty-rust-library-declares-provides
 
- -- Chris Lamb <lamby@debian.org>  Fri, 06 Nov 2020 09:24:07 +0000
+  [ Felix Lechner ]
+  * Do not flag uninstalled examples unless installation packages are
+    present. (Closes: #972614)
+
+  [ Sylvestre Ledru ]
+  * Rust libraries hitherto used empty installation packages with long
+    Provides lines to deal with peculiarities in Rust packaging. It is no
+    longer considered acceptable because it strains the archive
+    infrastructure, so flag empty Rust libraries that declare Provides.
+  * Provide a tip/clue in case of profile coverage errors.
+  * Fix a typo in the CONTRIBUTING.md file.
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 13 Nov 2020 09:57:52 +0000
 
 lintian (2.101.0) unstable; urgency=medium
 
