--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.102.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated at release time: please do not add entries below).
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 13 Nov 2020 10:00:29 +0000
+
 lintian (2.102.0) unstable; urgency=medium
 
   * Summary of tag changes:
