--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,17 @@
-lintian (2.103.0+git) UNRELEASED; urgency=medium
+lintian (2.104.0) unstable; urgency=medium
 
-  * WIP (generated at release time: please do not add entries below).
+  [ Baptiste Beauplat ]
+    Recognize the recently-released Standards-Version 4.5.1 as a valid
+    policy version.
 
- -- Chris Lamb <lamby@debian.org>  Sat, 21 Nov 2020 18:38:13 +0000
+  [ Sylvestre Ledru ]
+  * Accept field X-Cargo-Built-Using for installable packages; they are
+    used by Rust.
+
+  [ Paul Wise ]
+  * Add several spelling corrections.
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 27 Nov 2020 09:20:48 +0000
 
 lintian (2.103.0) unstable; urgency=medium
 
