Always send all debugging and status information to STDERR.
Greatly simplifies the handling of file descriptors in Lintian.

--- a/man/lintian.pod
+++ b/man/lintian.pod
@@ -483,13 +483,6 @@ Developer/Special usage options:
 
 Override lintian's warning when it is run with superuser privileges.
 
-=item B<--keep-lab>
-
-By default, temporary labs will be removed after lintian is finished.
-Specifying this options will leave the lab behind, which might be
-useful for debugging purposes.  You can find out where the temporary
-lab is located by running lintian with the B<--verbose> option.
-
 =item B<--packages-from-file> X
 
 The line is read as the path to a file to process (all whitespace is
@@ -499,37 +492,13 @@ If X is "-", Lintian will read the packages from STDIN.
 
 =item B<--perf-debug>
 
-Enable performance related debug logging.
+Enable performance related debug logging to STDERR.
 
 The data logged and the format used is subject to change with every
 release.
 
 Note that some of the information may also be available (possibly in
 a different format) with the B<--debug> option.
-
-=item B<--perf-output> OUTPUT
-
-Write performance related debug information to the specified file or
-file descriptor.  If OUTPUT starts with a '&' or '+', Lintian will
-handle OUTPUT specially.  Otherwise, Lintian will open the file
-denoted by OUTPUT for writing (truncating if it exists, creating it
-if it does not exist).
-
-If the first character of OUTPUT is a & and the rest of argument is a
-number N, then lintian attempts to write it to the file descriptor
-with the number N.  Said file descriptor must be open for writing.
-E.g I<&2> makes Lintian write the performance logging to STDERR.
-
-If the first character of OUTPUT is a +, Lintian will append to the
-file rather than truncating it.  In this case, the file name is OUTPUT
-with initial "+" character removed.  E.g. I<+my-file> makes Lintian
-append to I<my-file>
-
-If Lintian should write the output to a file starting with a literal
-'&' or '+', then simply prefix it with "./" (e.g. "+my-file" becomes
-"./+my-file").
-
-If this option omitted, Lintian will default to using STDOUT.
 
 =back
 
